# yt-bot

./: .env_example  .gitignore  Pipfile  pyproject.toml  readme.md  setup.py
data/: add_channels_db.py  add_video_db.py  cron.sh  dl_my_subs.py  ke_blog.csv  ke_music.csv  my_subs.csv  paths.py  tw_auth.py  tweet_videos.py
data/workflows/: __init__.py  channels.py
tests/domain/: test_feed_parser.py  test_parser.py  test_twitter.py
tests/services/: test_csv.py  test_db.py  test_rate_limiter.py  test_youtube.py
yt_bot/: config.py
yt_bot/domain/: __init__.py  channel_discovery.py  feed_parser.py  parser.py  twitter.py
yt_bot/models/: __init__.py  channel.py  unknown_channel.py  usage_stat.py  video.py
yt_bot/services/: __init__.py  csv.py  db.py  rate_limiter.py  youtube.py
