[project]
name = "yt-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    "feedparser>=6.0.12",
    "google-api-python-client>=2.188.0",
    "loguru>=0.7.3",
    "monsterui>=1.0.42",
    "pretty-errors>=1.2.25",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.46",
    "sqlalchemy-utils>=0.42.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["yt_bot"]
